Actualizacion global de la APIRest
